kong-proxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kong
  namespace: kong
spec:
  template:
    metadata:
      labels:
        name: kong
        app: kong
    spec:
      containers:
      - name: kong-proxy
        image: kong:1.2
        ports:
        - name: proxy
          containerPort: 8000
          protocol: TCP
        - name: proxy-ssl
          containerPort: 8443
          protocol: TCP
        lifecycle:
          preStop:
            exec:
              command: [ "/bin/sh", "-c", "kong quit" ]
      - name: kong-https
        image: yphani/kong-ssl-redirect
        ports:
        - name: nginx
          containerPort: 80
