kong-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: kong
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-central-1:294387193228:certificate/ed86172e-ffda-46e0-881e-b2bdea07501d"
    # Enable Proxy Protocol when Kong is listening for proxy-protocol
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    #service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - name: kong-proxy
    port: 80
    targetPort: 80
  - name: kong-proxy-ssl
    port: 443
    targetPort: 8000
    protocol: TCP
  selector:
    app: kong
